ANTLR4_LL/LeadParser.py
# Generated from Lead.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LeadParser ( Parser ):

    grammarFileName = "Lead.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "':'", "'='", "','", "'int'", 
                     "'float'", "'bool'", "'string'", "'func'", "'('", "')'", 
                     "'->'", "'{'", "'}'", "'return'", "'input'", "'print'", 
                     "'if'", "'else'", "'guard'", "'switch'", "'case'", 
                     "'-'", "'default'", "'for'", "';'", "'while'", "'repeat'", 
                     "'||'", "'&&'", "'true'", "'false'", "'!'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'*'", 
                     "'/'", "'**'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "NUMBER", "STRING", "COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_identList = 2
    RULE_type = 3
    RULE_functionDeclaration = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_returnStatement = 7
    RULE_statement = 8
    RULE_assignStatement = 9
    RULE_inputStatement = 10
    RULE_outputStatement = 11
    RULE_ifStatement = 12
    RULE_guardStatement = 13
    RULE_switchStatement = 14
    RULE_caseBlock = 15
    RULE_defaultBlock = 16
    RULE_forStatement = 17
    RULE_whileStatement = 18
    RULE_repeatWhileStatement = 19
    RULE_expressionStatement = 20
    RULE_codeBlock = 21
    RULE_expression = 22
    RULE_condition = 23
    RULE_boolExpression = 24
    RULE_boolTerm = 25
    RULE_boolFactor = 26
    RULE_comparison = 27
    RULE_relOp = 28
    RULE_arithmExpression = 29
    RULE_term = 30
    RULE_factor = 31
    RULE_sign = 32
    RULE_funcCall = 33
    RULE_argList = 34

    ruleNames =  [ "program", "declaration", "identList", "type", "functionDeclaration", 
                   "paramList", "param", "returnStatement", "statement", 
                   "assignStatement", "inputStatement", "outputStatement", 
                   "ifStatement", "guardStatement", "switchStatement", "caseBlock", 
                   "defaultBlock", "forStatement", "whileStatement", "repeatWhileStatement", 
                   "expressionStatement", "codeBlock", "expression", "condition", 
                   "boolExpression", "boolTerm", "boolFactor", "comparison", 
                   "relOp", "arithmExpression", "term", "factor", "sign", 
                   "funcCall", "argList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    IDENTIFIER=44
    NUMBER=45
    STRING=46
    COMMENT=47
    BLOCK_COMMENT=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LeadParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(LeadParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.StatementContext)
            else:
                return self.getTypedRuleContext(LeadParser.StatementContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(LeadParser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return LeadParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LeadParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 53891550283266) != 0):
                self.state = 73
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 70
                    self.declaration()
                    pass
                elif token in [10, 17, 18, 20, 21, 23, 25, 27, 28, 31, 32, 33, 40, 44, 45]:
                    self.state = 71
                    self.statement()
                    pass
                elif token in [9]:
                    self.state = 72
                    self.functionDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(LeadParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identList(self):
            return self.getTypedRuleContext(LeadParser.IdentListContext,0)


        def type_(self):
            return self.getTypedRuleContext(LeadParser.TypeContext,0)


        def expression(self):
            return self.getTypedRuleContext(LeadParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = LeadParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(LeadParser.T__0)
            self.state = 81
            self.identList()
            self.state = 82
            self.match(LeadParser.T__1)
            self.state = 83
            self.type_()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 84
                self.match(LeadParser.T__2)
                self.state = 85
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(LeadParser.IDENTIFIER)
            else:
                return self.getToken(LeadParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return LeadParser.RULE_identList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentList" ):
                return visitor.visitIdentList(self)
            else:
                return visitor.visitChildren(self)




    def identList(self):

        localctx = LeadParser.IdentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(LeadParser.IDENTIFIER)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 89
                self.match(LeadParser.T__3)
                self.state = 90
                self.match(LeadParser.IDENTIFIER)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LeadParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = LeadParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def paramList(self):
            return self.getTypedRuleContext(LeadParser.ParamListContext,0)


        def type_(self):
            return self.getTypedRuleContext(LeadParser.TypeContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.StatementContext)
            else:
                return self.getTypedRuleContext(LeadParser.StatementContext,i)


        def returnStatement(self):
            return self.getTypedRuleContext(LeadParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_functionDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = LeadParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(LeadParser.T__8)
            self.state = 99
            self.match(LeadParser.IDENTIFIER)
            self.state = 100
            self.match(LeadParser.T__9)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==44:
                self.state = 101
                self.paramList()


            self.state = 104
            self.match(LeadParser.T__10)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 105
                self.match(LeadParser.T__11)
                self.state = 106
                self.type_()


            self.state = 109
            self.match(LeadParser.T__12)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 53891550282752) != 0):
                self.state = 110
                self.statement()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 116
                self.returnStatement()


            self.state = 119
            self.match(LeadParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.ParamContext)
            else:
                return self.getTypedRuleContext(LeadParser.ParamContext,i)


        def getRuleIndex(self):
            return LeadParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = LeadParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.param()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 122
                self.match(LeadParser.T__3)
                self.state = 123
                self.param()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(LeadParser.TypeContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = LeadParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(LeadParser.IDENTIFIER)
            self.state = 130
            self.match(LeadParser.T__1)
            self.state = 131
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LeadParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LeadParser.RULE_returnStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = LeadParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LeadParser.T__14)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 134
                self.expression()

            elif la_ == 2:
                self.state = 135
                self.match(LeadParser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStatement(self):
            return self.getTypedRuleContext(LeadParser.AssignStatementContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(LeadParser.InputStatementContext,0)


        def outputStatement(self):
            return self.getTypedRuleContext(LeadParser.OutputStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(LeadParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(LeadParser.WhileStatementContext,0)


        def repeatWhileStatement(self):
            return self.getTypedRuleContext(LeadParser.RepeatWhileStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LeadParser.IfStatementContext,0)


        def guardStatement(self):
            return self.getTypedRuleContext(LeadParser.GuardStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(LeadParser.SwitchStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(LeadParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LeadParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.assignStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.inputStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.outputStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.repeatWhileStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 144
                self.ifStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 145
                self.guardStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 146
                self.switchStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 147
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(LeadParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_assignStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignStatement(self):

        localctx = LeadParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(LeadParser.IDENTIFIER)
            self.state = 151
            self.match(LeadParser.T__2)
            self.state = 152
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LeadParser.RULE_inputStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStatement" ):
                return visitor.visitInputStatement(self)
            else:
                return visitor.visitChildren(self)




    def inputStatement(self):

        localctx = LeadParser.InputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(LeadParser.IDENTIFIER)
            self.state = 155
            self.match(LeadParser.T__2)
            self.state = 156
            self.match(LeadParser.T__15)
            self.state = 157
            self.match(LeadParser.T__9)
            self.state = 158
            self.match(LeadParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LeadParser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(LeadParser.STRING, 0)

        def getRuleIndex(self):
            return LeadParser.RULE_outputStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputStatement" ):
                return visitor.visitOutputStatement(self)
            else:
                return visitor.visitChildren(self)




    def outputStatement(self):

        localctx = LeadParser.OutputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_outputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(LeadParser.T__16)
            self.state = 161
            self.match(LeadParser.T__9)
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 23, 31, 32, 33, 40, 44, 45]:
                self.state = 162
                self.expression()
                pass
            elif token in [46]:
                self.state = 163
                self.match(LeadParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 166
            self.match(LeadParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.ConditionContext)
            else:
                return self.getTypedRuleContext(LeadParser.ConditionContext,i)


        def codeBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.CodeBlockContext)
            else:
                return self.getTypedRuleContext(LeadParser.CodeBlockContext,i)


        def getRuleIndex(self):
            return LeadParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = LeadParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(LeadParser.T__17)
            self.state = 169
            self.condition()
            self.state = 170
            self.codeBlock()
            self.state = 178
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 171
                    self.match(LeadParser.T__18)
                    self.state = 172
                    self.match(LeadParser.T__17)
                    self.state = 173
                    self.condition()
                    self.state = 174
                    self.codeBlock() 
                self.state = 180
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 181
                self.match(LeadParser.T__18)
                self.state = 182
                self.codeBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuardStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(LeadParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.StatementContext)
            else:
                return self.getTypedRuleContext(LeadParser.StatementContext,i)


        def getRuleIndex(self):
            return LeadParser.RULE_guardStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGuardStatement" ):
                return visitor.visitGuardStatement(self)
            else:
                return visitor.visitChildren(self)




    def guardStatement(self):

        localctx = LeadParser.GuardStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_guardStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(LeadParser.T__19)
            self.state = 186
            self.match(LeadParser.T__9)
            self.state = 187
            self.condition()
            self.state = 188
            self.match(LeadParser.T__10)
            self.state = 189
            self.match(LeadParser.T__18)
            self.state = 190
            self.match(LeadParser.T__12)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 53891550282752) != 0):
                self.state = 191
                self.statement()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self.match(LeadParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LeadParser.IDENTIFIER, 0)

        def caseBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LeadParser.CaseBlockContext)
            else:
                return self.getTypedRuleContext(LeadParser.CaseBlockContext,i)


        def defaultBlock(self):
            return self.getTypedRuleContext(LeadParser.DefaultBlockContext,0)


        def getRuleIndex(self):
            return LeadParser.RULE_switchStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStatement" ):
                return visitor.visitSwitchStatement(self)
            else:
                return visitor.visitChildren(self)




    def switchStatement(self):
